<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OOBE</string>
    <string name="oobe_btn_text_next">Next</string>
    <string name="oobe_btn_text_back">Back</string>
    <string name="oobe_btn_text_finish">Finish</string>
    <string name="oobe_btn_text_skip">Skip</string>
    <string name="oobe_btn_text_dismiss">Dismiss</string>
    <string name="oobe_title_language_setting">Select Language</string>
    <string name="oobe_summary_language_setting">Select your operating phone language</string>
    <string name="oobe_title_keyboard_setting">Select keyboards</string>
    <string name="oobe_summary_keyboard_setting">Select your preferred keyboards.</string>
    <string name="oobe_title_import_contacts">Import contacts from SIM</string>
    <string name="oobe_summary_import_contacts">Select some or all of your inserted SIM cards to import the contacts to phone.</string>
    <string name="oobe_title_internet_connection_setting">Select internet connection</string>
    <string name="oobe_summary_internet_connection">Select your preferred internet connection. You can always change these options later in Settings.</string>
    <string name="oobe_title_sim_management">Manage SIM</string>
    <string name="oobe_summary_sim_management">Tap a SIM card to edit its info. By default, the operator name is set as SIM name if possible.</string>
    <string name="oobe_title_sim_edit">Edit SIM</string>
    <string name="oobe_summary_sim_edit">Edit SIM info to fit with your preferences. You can change SIM name and color and edit phone number.</string>
    <string name="oobe_title_default_sim">Set default SIM</string>
    <string name="oobe_summary_default_sim">Select your preferred SIM as default SIM for a specified service.</string>
    <string name="oobe_title_wifi_settings">Set up Wi-Fi network</string>
    <string name="oobe_title_wifi">Wi-Fi</string>
    <string name="oobe_summary_wifi_settings">Turn on and select a preferred Wi-Fi network.</string>
    <string name="oobe_title_date_time">Set up date &amp; time</string>
    <string name="oobe_summary_date_time">Tap to select your date &amp; time format and set your date &amp; time info manually if necessary.</string>
    <string name="oobe_locale_switching">Waiting...</string>
    <string name="oobe_ime_suggested">Suggested</string>
    <string name="oobe_waiting_sim">Waiting SIM card initialization...</string>
    <string name="oobe_gemini_3g_indic">3G</string>
    <string name="oobe_internet_gprs_or_wifi_title">Mobile network or Wi-Fi</string>
    <string name="oobe_internet_gprs_or_wifi_summary">Choose this, if you have a data plan with your mobile network provider.</string>
    <string name="oobe_internet_wifi_only_title">Wi-Fi Only</string>
    <string name="oobe_internet_wifi_only_summary">Choose this, if you haven\'t had a data plan</string>
    <string name="oobe_btn_start_import_contacts">Start to import</string>
    <string name="oobe_btn_cancel_import_contacts">Cancel</string>
    <string name="oobe_note_import_contacts_prepare">Please wait for a moment to copy SIM contacts.</string>
    <string name="oobe_note_import_contacts_going">You can proceed to next step while the import is still in process.</string>
    <string name="oobe_note_import_contacts_finish">Copy is complete. You can proceed to next step.</string>
    <string name="oobe_note_import_contacts_cancel">Import canceled. You can skip to next step or start importing again.</string>
    <string name="oobe_note_progress_copy_contacts">%1$d of %2$d contacts</string>
    <string name="oobe_note_copy_contacts_waiting">Waiting...</string>
    <string name="basic_congratulation_title">Congratulations!</string>
    <string name="basic_congratulation_summary">You have finished all basic settings. You are now ready to enjoy your new device.</string>
    <string name="oobe_advance_settings_entrance_title">Advanced settings</string>
    <string name="oobe_advance_settings_entrance_summary">If you already have a Google account, E-mail account 
    	or any social network account, we encourage you continuing advance settings.</string>
    <string name="oobe_sync_settings_name">Sync settings</string>
    <string name="oobe_sync_settings_title">Scheduled sync</string>
    <string name="oobe_sync_settings_summary">"Select if you like to enable data sync services. If you don't have an unlimited data plan, syncing data may result in additional costs."</string>
    <string name="oobe_account_settings_name">Account settings</string>
    <string name="oobe_account_settings_title">Set up accounts</string>
    <string name="oobe_account_settings_summary">To sync mail, contacts, and calendar events, you need to tap and set up at least one of following account types.</string>
    <string name="oobe_account_list_title">Accounts</string>
    <string name="oobe_sns_settings_name">SNS settings</string>
    <string name="oobe_sns_settings_title">Set up social networks</string>
    <string name="oobe_sns_settings_summary">Set up your favorite social network and you will be able to send and receive updates in Social network application.</string>
    <string name="oobe_advance_settings_end_title">Congratulations!</string>
    <string name="oobe_advance_settings_end_summary">You have finished all advanced settings. You are now ready to enjoy your new device.
    	\n\n You can always change your settings in Setup Wizard from App launcher.</string>
    <string name="oobe_advance_settings_end_name">Last message</string>
    <string name="tap_to_add">Tap to add <xliff:g id="account" example="renren">%s</xliff:g> account</string>
    <string name="oobe_import_contacts_sim_name">SIM Card</string>
    <string name="oobe_contact_import_null_cursor">Query completed but get a null cursor, importing process fail!</string>
    <string name="lock_settings_picker_title">Select screen lock</string>
    <string name="add_network_string"> Add Network </string>
    <string name="oobe_title_timezone">Select time zone</string>
    <string name="oobe_summary_timezone">Please select your prefered time zone.</string>
    <string name="gps_time_sync_attention_gps_on">It will take at most 1 minute to obtain GPS fix. Besides, GPS may fail to provide time due to weak environmental signal.\n\nAre you sure to use GPS provided time?</string>
    <string name="gps_time_sync_attention_gps_off">To use GPS provided time, you must enable GPS first. It then take at most 1 minute to obtain GPS fix. Besides, GPS may fail to provide time due to weak environmental signal. \n\nAre you sure to enable GPS now and wait for GPS provided time?</string>
    <string name="sync_account_summary_on">Automatically sync on</string>
    <string name="sync_account_summary_off">Automatically sync off</string>
    <string name="sync_account_title">Auto Sync Account</string>
    <string name="wifi_setup_wizard_title">Select Wi-Fi</string>
    <string name="wifi_menu_wps_pbc">WPS Push Button</string>
    <string name="wifi_other_network">Other network\u2026</string>
    <string name="wifi_setup_skip">Skip</string>
    <string name="wifi_setup_next">Next</string>
    <string name="wifi_setup_back">Back</string>
    <string name="wifi_empty_list_wifi_off">To see available networks, turn Wi-Fi on.</string>
    <string name="wifi_empty_list_wifi_on">Searching for Wi-Fi networks\u2026</string>
    <string name="help_url_wifi" translatable="false"></string>
    <string name="wifi_skip_anyway" msgid="5205612884736051138">Skip anyway</string>
    <string name="wifi_dont_skip">Don\'t skip</string>
    <string name="wifi_skipped_message" product="default" msgid="4376150150678208848">WARNING: You may incur extra carrier data charges.\n\nPhone setup can require significant network activity.</string>
    <string name="wifi_and_mobile_skipped_message" product="default" msgid="1288483646141987070">WARNING: The phone won\'t be able to verify that your software is up to date.</string>
    <string name="wifi_required_info_text">To complete setup, your tablet needs access to Wi-Fi. After setup, you can switch between mobile data and Wi-Fi.</string>
    <string name="gemini_sim_info_title">SIM Information</string>
    <string name="gemini_default_sim_title">Default SIM</string>
    <string name="gemini_general_settings_title">General settings</string>
    <string name="gemini_roaming_settings_title">Roaming</string>
    <string name="gemini_contacts_sim_title">"Contacts &amp; SIM"</string>
    <string name="gemini_contacts_sim_summary">Associate contacts with a specific SIM</string>
    <string name="gemini_voice_call">Voice call</string>
    <string name="gemini_video_call">Video call</string>
    <string name="gemini_data_connection">Data connection</string>
    <string name="gemini_msg">Messaging</string>
    <string name="gemini_default_sim_always_ask">Always ask</string>
    <string name="gemini_intenet_call">Internet Call</string>
    <string name="gemini_default_sim_never">Off</string>
    <string name="gemini_default_sim_3g_off">Off</string>
    <string name="gemini_gsm_umts_network_preferences_title">Network Mode</string>
    <string name="gemini_sim_mode_progress_activating_message">Activating\u2026</string>
    <string name="gemini_sim_mode_progress_deactivating_message">Deactivating\u2026</string>
    <string name="gemini_3g_indic" translatable="false">3G</string>
    <string name="gemini_sim_info_editor_name">Edit SIM name</string>
    <string name="gemini_sim_info_editor_name_dup_title">Save failed</string>
    <string name="gemini_sim_info_editor_name_dup_msg">Duplicate name for SIM card</string>
    <string name="gemini_sim_info_editor_number">Enter phone number</string>
    <string name="gemini_sim_info_editor_color">Set background color</string>
    <string name="gemini_sim_info_editor_number_display_format">Display numbers</string>
    <string name="gemini_no_sim_indicator">No SIM card</string>
    <string name="gemini_data_connection_progress_message">"Please wait..."</string>
    <string name="gemini_3g_modem_switching_message">"Switching SIM will take around 10 seconds to complete. Please wait..."</string>
    <string name="gemini_3g_modem_switch_confirm_message">"This will also switch 3G service to this SIM. Continue? Please also make sure this selected SIM supports 3G service."</string>
    <string name="apn_not_set">Not set</string>
    <string name="gemini_3g_disable_warning_case0">"You must enable data roaming for this SIM first which may incur significant roaming charges! Are you sure to enable data roaming and select this SIM?"</string>
    <string name="gemini_3g_disable_warning_case1">"3G service is not available with this selected SIM. This may load data slower. You can change the 3G service setting under Settings > Wireless &amp; networks > Mobile networks. Are you sure to select this SIM?"</string>
    <string name="gemini_3g_disable_warning_case2">"3G service is not available with this selected SIM. This may load data slower. You can change the 3G service setting under Settings > SIM management. Are you sure to select this SIM?"</string>
    <string name="gemini_3g_disable_warning_case3">"You must enable data roaming for this SIM first which may incur significant roaming charges! Besides, 3G service is not available with this SIM. This may load data slower. You can change it under Settings > Wireless &amp; networks > Mobile networks. Are you sure to enable data roaming and select this SIM?"</string>
    <string name="skip_button">Skip</string>
    <string name="ok_button">Start</string>
    <string name="qsg_title_begin">Quick Start Guide</string>
    <string name="qsg_summary_begin">This Quick start guide contains 4 useful tips and introduces you basic gestures and phone management.</string>
    <string name="next">Next</string>
    <string name="play_again">Play again</string>
</resources>